--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <h1>check</h1>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
